Public/CSS/style.css
.job-div a {
  text-decoration: none;

}

.darkmode {
/* 
     --white: #FFFFFF;
      --blue-color: #5964E0;
--light-violet:  #939BF4;
--clr-txt: #9DAEC2;
--midnight-clr: #121721;

 
--violet:  #9e7f66;
  

   --light-grey: #F4F6F8;
    --white: #FFFFFF;
  
    --grey-clr:  #9DAEC2;
    --dark-grey: #6E8098; */

         --blue-color: #5964E0;
--light-violet:  #939BF4;
--clr-txt: #9DAEC2;
--midnight-clr: #121721;
 --white: #FFFFFF;
  --very-dark-blue:  #19202D;
--violet:  #9e7f66;
  

   --light-grey: #F4F6F8;
    --white: #FFFFFF;
  
    --grey-clr:  #9DAEC2;
    --dark-grey: #6E8098;

    
}


:root {
  
    --white: #19202D;
    --midnight-clr:#F4F6F8;
     --very-dark-blue: #FFFFFF;
        --blue-color: #5964E0;
    --light-violet:  #939BF4;
  

color-scheme: light;
}










*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}




.job-div p, li{
  color: var(--light-violet);
  padding-inline: 5px;
}

/* Header */

header {
  position: relative;
  min-height: 165px;
  min-width: 100%;
  color: var(--white);
z-index: 1;
}


header {
  display: flex;
  justify-content: space-between;

  padding: 2em 2em;
  column-gap: clamp(2em, 4vw, 3em);
}
.header-bg-img {
  position: absolute;
  left: 0px;
  top: -20px;
  z-index: -1;
  min-width: 100%;
}

.header-bg-img img {
  max-height: 165px;
  min-width: 100%;
}
html, body {
    min-height: 100vh;
    min-width: 100%;
    display: grid;
    place-items: center;
    background-color: var(--midnight-clr);
}






/* search css */

.search-div{
  min-width: 60%;
  padding: 0 1.5rem;
  max-width: 60%;
  border-radius: 10px;
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--very-dark-blue);

}

.searchBox {
  display: flex;
  align-items: center;
  min-width: 60%;

}






 .jobs-section h1 {
  color: var(--white);
 }

  .hide {
    display: none;
  }

  .show {
    display: block;
  }


.searchBox .input-txt {
  background-color: var(--very-dark-blue);
  border: none;
  outline: none;
  color: var(--white);
  font-size: 1rem;
}



/*  */
main .btn  {
  font-size: 16px;
  background-color: var(--blue-color);
  padding: 10px 15px;
  color: var(--white);
  border-radius: 5px;
  max-width: 120px;
  text-align: center;
  margin: 14px 0;

}


.btn:hover {
  background-color: var(--light-violet);
  transition: ease-in-out;
}

.load-btn-div   {
  display: grid;
  place-items: center;
}

.jobs-section {
  margin-top: 4rem;
  min-height: 100vh;
  max-width: 100vw;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
  gap: 15px;
  padding: 10px;
  padding: 10px clamp(1rem, 4vw, 4rem);

}

 
.job-div img {
  padding-top: -4rem;

  /* height: 20px;
  width: 20px; */
  padding: 5px 0;
  border-radius: 10px;
  object-fit: cover;
}


.job-logo {
    margin-left: 1rem;
  height: 40px;
  width: 40px;
  display: grid;
  place-items: center;
  border-radius: 10px;
}
.time-job-type {
  display: flex;
  align-items: center;
  font-size: 15px;
padding: 10px 15px;
  color: var(--grey-clr);
  
}
.time-job-type li {
  font-size: 15;
}

.time-job-type p {
  font-size: 15px;
}

.job-div {
  display: block;
  max-height: 200px;
  border-radius: 5px;
  max-width: 300px;
  background-color: var(--very-dark-blue);
  color: var(--white);
  padding: 1em;
}

.job-div strong {
  font-weight: bold;
  color: var(--blue-color);
  padding: 10px 15px;
}

.position {
  padding: 10px 15px;
}
.position h1 {
  font-size: 1rem;
}

.position p {
  font-size: 13px;
}


/* footer */

footer {
  height: 100px;
  min-width: 100%;
  display: grid;
  place-items: center;
  background-color: var(--very-dark-blue);
}

.footer-content {

  min-width: 69.375em;
  color: var(--white);
  display: grid;
  grid-template-columns: repeat(2, 1.1fr);
  place-items: center;
  align-items: center;
  font-size: 1rem;
  padding: 1em 2rem;

 
}

.footer-content a{
   text-decoration: none;
    background-color: var(--light-violet);
  padding: 5px 15px;
  color: var(--white);
  border-radius: 5px;
  width: 100px;
  text-align: center;
  font-size:  15px;
  margin-right: 15px;
  
}

.footer-content h1, p {
  font-size: clamp(15px , 4vw, 1.4rem);
}

.footer-content p {
  color: var(--light-violet);
}



/* Theme */



*{
  margin: 0;
  padding: 0;
}




.theme-switch {


    background-color: white;
    border-radius: 50%;
}



.theme-switch{
  height: 50px;
  width: 50px;
  padding: 0;
  border-radius: 50%;
  background-color: var(--base-variant);
  display: flex;
  justify-content: center;
  align-items: center;
  top: 20px;
  right: 20px;
}
.theme-switch svg{
  height: 35px;
  width: 35px;
  border-radius: 50%;
  background-color:white;
  fill: black;
}
.theme-switch svg:last-child{
  display: none;
}
.darkmode .theme-switch svg:first-child{
  display: none;
}
.darkmode .theme-switch svg:last-child{
  display: block;
}









/* Details css */



.detials-content {
  min-height: 100vh;
  max-width: 100%;
  display: grid;
  place-items: center;
  background-color: var(--very-dark-blue);
  padding: 5px 1.5rem;
}




.job-header {
  margin: 2em 0;
  max-height: 140px;
  min-width: 55%;
  margin-top: -4.5rem;
  background-color: var(--very-dark-blue);
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 10px;
  position: relative;
  z-index: 2;

}


.job-header .logo img {
  height: 23px;
  width: 81px;
  object-fit: contain;
}

  .job-header .logo {
    padding: 2em 20px;
    border-radius: 10px 0 0 10px;
  }

/* .detials-btn {
   background-color: var(--blue-color);
  padding: 10px 15px;
  color: var(--white);
  border-radius: 5px;
  width: 100px;
  text-align: center;
  font-size: clamp(15px, 2vw, 1rem);
} */

.job-header a {

  text-decoration: none;
    background-color: var(--light-violet);
  padding: 5px 15px;
  color: var(--white);
  border-radius: 5px;
  width: 100px;
  text-align: center;
  font-size:  15px;
  margin-right: 15px;
}




.txt strong {
  color: var(--white);
}  

.txt p {
  color: var(--clr-txt);
}


.detials-content {
  margin: 2rem 0;
  color: var(--clr-txt);
  min-height: 100vh;
  max-width: 70%;
  display: grid;
  place-items: center;
  border-radius: 10px;
  
}


.job-txt h1 {
  color: var(--white);
  font-size: clamp(1rem, 2vw, 1.5rem);
}

.job-txt a {
  color: var(--white);
  text-decoration: none;
  background-color: var(--blue-color);
  padding: 10px 15px;
  color: var(--white);
  border-radius: 5px;
  width: 100px;
  text-align: center;
  font-size: clamp(15px, 2vw, 1rem);
}

.flex  {
  display: flex;
  column-gap: 10px;
  align-items: center;
}

.flex p, li {
  font-size: 14px;
}




.job-desc{
  display: flex;
  padding: 2em 0;
  flex-direction: column;
  row-gap: 1em;
  min-height: 100px;
  min-width: 100%;
   padding: 15px 20px;

}

.job-txt {
  max-height: 130px;
  min-width: 100%;
  display: flex;
  justify-content: space-between;

  

}




.container {
  min-height: 100vh;
  max-width: 67rem;
  display: grid;
  place-items: center;
} 


.info-one , .info-two{
  padding: 15px 20px;
}


.info-one, .info-one , strong {
  color: var(--white);
  font-size: 1.3rem;
  margin: 15px 0;
}

.location {
  margin-top: -2rem;
}

.info-one p , .info-two p {
  color: var(--clr-txt);
  font-size: 16px;
  padding: 20px 0;

}

.info-one li {
  font-size: 16px;
  color: var(--clr-txt);
  padding: 3px;
  
}

.info-two li{
  font-size: 16px;
  color: var(--clr-txt);
  padding: 3px;
  
}


article p {
  margin: 1rem 15px;
  font-size: 16px;
  max-width: 60%;
   padding: 15px 20px;
}

